--- a/tunnel-prod-01/docker-compose.yml
+++ b/tunnel-prod-01/docker-compose.yml
@@ -1,5 +1,8 @@
+networks:
+  tunnel:
+    external: true
 services:
-  cloudflared:
+  tunnel-prod-1:
     container_name: tunnel-prod-1
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
@@ -9,6 +12,3 @@ services:
         ipv4_address: 172.30.0.2
     environment:
       - TUNNEL_TOKEN=${TUNNEL_TOKEN}
-networks:
-  tunnel:
-    external: true
