--- a/traefik-prod-01/config/conf/http.yaml
+++ b/traefik-prod-01/config/conf/http.yaml
@@ -14,6 +14,13 @@ http:
       service: pihole-svc
       tls:
         certResolver: cloudflare
+    proxmox-rtr:
+      entryPoints:
+        - websecure
+      rule: "Host(`prx-prod-01.home.bowen-arrows.net`)"
+      service: proxmox-svc
+      tls:
+        certResolver: cloudflare
 
   services:
     homeassistant-svc:
@@ -24,3 +31,7 @@ http:
       loadBalancer:
         servers:
         - url: http://192.168.1.129
+    proxmox-svc:
+      loadBalancer:
+        servers:
+        - url: https://192.168.1.130:8006
