Update Wiki shortcut

--- a/homepage/homepage-prod-1/config/services.yaml
+++ b/homepage/homepage-prod-1/config/services.yaml
@@ -18,7 +18,7 @@
         description: Home Automation Platform
     - Wiki.js:
         icon: wikijs.png
-        href: https://wiki-prod-1.home.bowen-arrows.net/
+        href: https://wiki-prod-1.bowen-arrows.net/login
         description: Self Hosted Wiki
 #     - Grocy:
 #         icon: grocy.png
