Update Homepage and Wiki

--- a/wiki/wiki-prod-1/docker-compose.yml
+++ b/wiki/wiki-prod-1/docker-compose.yml
@@ -21,6 +21,7 @@ services:
 
   wiki-prod-1:
     image: ghcr.io/requarks/wiki:2
+    container_name: wiki-prod-1
     depends_on:
       - wiki-db
     environment:
