--- a/homepage/homepage-prod-1/config/services.yaml
+++ b/homepage/homepage-prod-1/config/services.yaml
@@ -21,11 +21,11 @@
         href: https://nodered-prod-1.home.bowen-arrows.net/
         container: nodered-prod-1
         description: Flow Based Automation Platform
-    - Wiki.js:
-        icon: wikijs.png
-        href: https://wiki-prod-1.bowen-arrows.net/login
-        container: wiki-prod-1
-        description: Self Hosted Wiki
+    # - Wiki.js:
+    #     icon: wikijs.png
+    #     href: https://wiki-prod-1.bowen-arrows.net/login
+    #     container: wiki-prod-1
+    #     description: Self Hosted Wiki
 #     - Grocy:
 #         icon: grocy.png
 #         href: https://grocy.bowen-arrows.net
