--- a/authentik/authentik-prod-1/docker-compose.yml
+++ b/authentik/authentik-prod-1/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       - frontend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.authentik-prod-1-https.rule=Host(`authentik-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.authentik-prod-1-https.rule=Host(`authentik-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.authentik-prod-1-https.entrypoints=websecure"
       - "traefik.http.routers.authentik-prod-1-https.tls=true"
       - "traefik.http.routers.authentik-prod-1-https.tls.certresolver=cloudflare"
