--- a/bookstack/bookstack-prod-1/docker-compose.yml
+++ b/bookstack/bookstack-prod-1/docker-compose.yml
@@ -24,9 +24,9 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=frontend"
       - "traefik.http.routers.bookstack-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.bookstack-prod-1-http.rule=Host(`bookstack-prod-1.home.bowen-arrows.net`) || Host(`bookstack-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.bookstack-prod-1-http.rule=Host(`bookstack-prod-1.home.bowenarrows.net`) || Host(`bookstack-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.bookstack-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.bookstack-prod-1-https.rule=Host(`bookstack-prod-1.home.bowen-arrows.net`) || Host(`bookstack-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.bookstack-prod-1-https.rule=Host(`bookstack-prod-1.home.bowenarrows.net`) || Host(`bookstack-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.bookstack-prod-1-https.tls=true"
       - "traefik.http.routers.bookstack-prod-1-https.tls.certresolver=cloudflare"
       - "traefik.http.routers.bookstack-prod-1-https.service=bookstack-prod-1-svc"
