--- a/homepage/homepage-prod-1/docker-compose.yml
+++ b/homepage/homepage-prod-1/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.homepage-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.homepage-prod-1-http.rule=Host(`homepage-prod-1.home.bowen-arrows.net`) || Host(`homepage-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.homepage-prod-1-http.rule=Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.homepage-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.homepage-prod-1-https.rule=Host(`homepage-prod-1.home.bowen-arrows.net`) || Host(`homepage-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.homepage-prod-1-https.rule=Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.homepage-prod-1-https.tls=true"
       - "traefik.http.routers.homepage-prod-1-https.tls.certresolver=cloudflare"
       - "traefik.http.routers.homepage-prod-1-https.middlewares=authentik-prod-1-middleware@file"
