--- a/kuma/kuma-prod-1/docker-compose.yml
+++ b/kuma/kuma-prod-1/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kuma-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.kuma-prod-1-http.rule=Host(`kuma-prod-1.home.bowen-arrows.net`) || Host(`kuma-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.kuma-prod-1-http.rule=Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.kuma-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.kuma-prod-1-https.rule=Host(`kuma-prod-1.home.bowen-arrows.net`) || Host(`kuma-prod-1.bowen-arrows.net`)"
+      - "traefik.http.routers.kuma-prod-1-https.rule=Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma-prod-1.bowenarrows.net`)"
       - "traefik.http.routers.kuma-prod-1-https.tls=true"
       - "traefik.http.routers.kuma-prod-1-https.tls.certresolver=cloudflare"
       - "traefik.http.routers.kuma-prod-1-https.service=kuma-prod-1-svc"
