--- a/node-red/nodered-prod-1/docker-compose.yml
+++ b/node-red/nodered-prod-1/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nodered-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.nodered-prod-1-http.rule=Host(`nodered-prod-1.home.bowen-arrows.net`)"
+      - "traefik.http.routers.nodered-prod-1-http.rule=Host(`nodered-prod-1.home.bowenarrows.net`)"
       - "traefik.http.routers.nodered-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.nodered-prod-1-https.rule=Host(`nodered-prod-1.home.bowen-arrows.net`)"
+      - "traefik.http.routers.nodered-prod-1-https.rule=Host(`nodered-prod-1.home.bowenarrows.net`)"
       - "traefik.http.routers.nodered-prod-1-https.tls=true"
       - "traefik.http.routers.nodered-prod-1-https.tls.certresolver=cloudflare"
       - "traefik.http.routers.nodered-prod-1-https.service=nodered-prod-1-svc"
