--- a/dockge/dockge-prod-1/docker-compose.yml
+++ b/dockge/dockge-prod-1/docker-compose.yml
@@ -20,10 +20,8 @@ services:
       # Tell Dockge where to find the stacks
       - DOCKGE_STACKS_DIR=/home/bowenarrows/projects/dockge/dockge-compose
     networks:
-      frontend:
-        ipv4_address: 172.10.0.10
-      backend:
-        ipv4_address: 172.20.0.10
+      - frontend
+      - backend
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.dockge-prod-1-http.entrypoints=web"
