--- a/foundryvtt/vtt-eval-1/docker-compose.yml
+++ b/foundryvtt/vtt-eval-1/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   foundry:
-    image: felddy/foundryvtt:release
+    image: felddy/foundryvtt:13.333
     hostname: vtt-prod-1
     volumes:
       - type: bind
