--- a/bind/dns-prod-1/config/named.conf
+++ b/bind/dns-prod-1/config/named.conf
@@ -15,3 +15,7 @@ zone "home.bowenarrows.net" IN {
     type master;
     file "/etc/bind/home-bowenarrows-net.zone";
 };
+zone "bowenarrows.net" IN {
+    type master;
+    file "/etc/bind/bowenarrows-net.zone";
+};
