--- a/glance/home-prod-1/config/glance.yml
+++ b/glance/home-prod-1/config/glance.yml
@@ -116,16 +116,16 @@ pages:
                 - title: Node Red
                   url: https://nodered-prod-1.home.bowenarrows.net/
                   icon: di:node-red
-            - type: monitor
-              cache: 1m
-              title: Lab
-              sites:
                 - title: Proxmox
                   url: https://prx-prod-1.home.bowenarrows.net/
                   icon: di:proxmox
                 - title: Portainer
                   url: https://port-prod-1.home.bowenarrows.net/
                   icon: di:portainer
+            - type: monitor
+              cache: 1m
+              title: Monitoring
+              sites:
                 - title: Dockge
                   url: https://dockge-prod-1.home.bowenarrows.net/
                   icon: di:dockge
