--- a/authentik/authentik-prod-1/docker-compose.yml
+++ b/authentik/authentik-prod-1/docker-compose.yml
@@ -28,6 +28,9 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - backend
+    labels:
+      glance.name: PostgreSQL
+      glance.parent: authentik-prod-1-server
   redis:
     image: docker.io/library/redis:alpine
     container_name: authentik-prod-1-redis
@@ -43,6 +46,9 @@ services:
       - redis:/data
     networks:
       - backend
+    labels:
+      glance.name: Redis
+      glance.parent: authentik-prod-1-server
   server:
     image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2024.4.2}
     container_name: authentik-prod-1-server
@@ -66,13 +72,18 @@ services:
       - backend
       - frontend
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.authentik-prod-1-https.rule=Host(`authentik-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.authentik-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.authentik-prod-1-https.tls=true"
-      - "traefik.http.routers.authentik-prod-1-https.tls.certresolver=cloudflare"
-      - "traefik.http.routers.authentik-prod-1-https.service=authentik-prod-1-svc"
-      - "traefik.http.services.authentik-prod-1-svc.loadBalancer.server.port=9000"
+      glance.name: Authentik
+      glance.icon: si:authentik
+      glance.id: authentik-prod-1-server
+      glance.url: https://authentik-prod-1.bowenarrows.net
+      glance.description: SAML2/OIDC authentication server.
+      traefik.enable: true
+      traefik.http.routers.authentik-prod-1-https.rule: Host(`authentik-prod-1.bowenarrows.net`)
+      traefik.http.routers.authentik-prod-1-https.entrypoints: websecure
+      traefik.http.routers.authentik-prod-1-https.tls: true
+      traefik.http.routers.authentik-prod-1-https.tls.certresolver: cloudflare
+      traefik.http.routers.authentik-prod-1-https.service: authentik-prod-1-svc
+      traefik.http.services.authentik-prod-1-svc.loadBalancer.server.port: 9000
   worker:
     image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2024.10.4}
     container_name: authentik-prod-1-worker
@@ -97,4 +108,7 @@ services:
       - redis
     networks:
       - backend
+    labels:
+      glance.name: Worker
+      glance.parent: authentik-prod-1-server
 # Setup at https://authentik-prod-1.bowenarrows.net/if/flow/initial-setup/
