--- a/cloudflared/tunnel-prod-1/docker-compose.yml
+++ b/cloudflared/tunnel-prod-1/docker-compose.yml
@@ -12,3 +12,8 @@ services:
         ipv4_address: 172.30.0.2
     environment:
       - TUNNEL_TOKEN=${TUNNEL_TOKEN}
+    labels:
+      glance.name: Tunnel-Prod-1
+      glance.icon: si:cloudflare
+      glance.id: tunnel-prod-1
+      glance.description: Cloudflare Tunnel
