--- a/dockge/dockge-compose/ddb-proxy/compose.yaml
+++ b/dockge/dockge-compose/ddb-proxy/compose.yaml
@@ -9,12 +9,15 @@ services:
       - frontend
     restart: unless-stopped
     labels:
-      - traefik.enable=true
-      - traefik.http.routers.ddb-proxy-http.entrypoints=web
-      - traefik.http.routers.ddb-proxy-http.rule=Host(`ddb-proxy.home.bowenarrows.net`)
-      - traefik.http.routers.ddb-proxy-https.entrypoints=websecure
-      - traefik.http.routers.ddb-proxy-https.rule=Host(`ddb-proxy.home.bowenarrows.net`)
-      - traefik.http.routers.ddb-proxy-https.tls=true
-      - traefik.http.routers.ddb-proxy-https.tls.certresolver=cloudflare
-      - traefik.http.routers.ddb-proxy-https.service=ddb-proxy-svc
-      - traefik.http.services.ddb-proxy-svc.loadBalancer.server.port=3000
+      glance.name: DDB Proxy
+      glance.icon: si:docker
+      glance.id: ddb-proxy
+      traefik.enable: true
+      traefik.http.routers.ddb-proxy-http.entrypoints: web
+      traefik.http.routers.ddb-proxy-http.rule: Host(`ddb-proxy.home.bowenarrows.net`)
+      traefik.http.routers.ddb-proxy-https.entrypoints: websecure
+      traefik.http.routers.ddb-proxy-https.rule: Host(`ddb-proxy.home.bowenarrows.net`)
+      traefik.http.routers.ddb-proxy-https.tls: true
+      traefik.http.routers.ddb-proxy-https.tls.certresolver: cloudflare
+      traefik.http.routers.ddb-proxy-https.service: ddb-proxy-svc
+      traefik.http.services.ddb-proxy-svc.loadBalancer.server.port: 3000
