--- a/dockge/dockge-prod-1/docker-compose.yml
+++ b/dockge/dockge-prod-1/docker-compose.yml
@@ -23,12 +23,17 @@ services:
       - frontend
       - backend
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dockge-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.dockge-prod-1-http.rule=Host(`dockge-prod-1.home.bowenarrows.net`) || Host(`dockge-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.dockge-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.dockge-prod-1-https.rule=Host(`dockge-prod-1.home.bowenarrows.net`) || Host(`dockge-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.dockge-prod-1-https.tls=true"
-      - "traefik.http.routers.dockge-prod-1-https.tls.certresolver=cloudflare"
-      - "traefik.http.routers.dockge-prod-1-https.service=dockge-prod-1-svc"
-      - "traefik.http.services.dockge-prod-1-svc.loadBalancer.server.port=5001"
+      glance.name: Dockge
+      glance.icon: si:docker
+      glance.id: dockge-prod-1
+      glance.url: https://dockge-prod-1.home.bowenarrows.net
+      glance.description: Docker Compose GUI
+      traefik.enable: true
+      traefik.http.routers.dockge-prod-1-http.entrypoints: web
+      traefik.http.routers.dockge-prod-1-http.rule: Host(`dockge-prod-1.home.bowenarrows.net`) || Host(`dockge-prod-1.bowenarrows.net`)
+      traefik.http.routers.dockge-prod-1-https.entrypoints: websecure
+      traefik.http.routers.dockge-prod-1-https.rule: Host(`dockge-prod-1.home.bowenarrows.net`) || Host(`dockge-prod-1.bowenarrows.net`)
+      traefik.http.routers.dockge-prod-1-https.tls: true
+      traefik.http.routers.dockge-prod-1-https.tls.certresolver: cloudflare
+      traefik.http.routers.dockge-prod-1-https.service: dockge-prod-1-svc
+      traefik.http.services.dockge-prod-1-svc.loadBalancer.server.port: 5001
