--- a/glance/home-prod-1/docker-compose.yml
+++ b/glance/home-prod-1/docker-compose.yml
@@ -13,16 +13,21 @@ services:
     # ports:
     #   - 8080:8080
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.home-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.home-prod-1-http.rule=Host(`home-prod-1.home.bowenarrows.net`) || Host(`home-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.home-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.home-prod-1-https.rule=Host(`home-prod-1.home.bowenarrows.net`) || Host(`home-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.home-prod-1-https.tls=true"
-      - "traefik.http.routers.home-prod-1-https.tls.certresolver=cloudflare"
-      # - "traefik.http.routers.home-prod-1-https.middlewares=authentik-prod-1-middleware@file"
-      - "traefik.http.routers.home-prod-1-https.service=home-prod-1-svc"
-      - "traefik.http.services.home-prod-1-svc.loadBalancer.server.port=8080"
+      glance.name: Glance
+      glance.icon: di:glance-light
+      glance.id: home-prod-1
+      glance.url: https://home-prod-1.home.bowenarrows.net
+      glance.description: Glance Dashboard
+      traefik.enable: true
+      traefik.http.routers.home-prod-1-http.entrypoints: web
+      traefik.http.routers.home-prod-1-http.rule: Host(`home-prod-1.home.bowenarrows.net`) || Host(`home-prod-1.bowenarrows.net`)
+      traefik.http.routers.home-prod-1-https.entrypoints: websecure
+      traefik.http.routers.home-prod-1-https.rule: Host(`home-prod-1.home.bowenarrows.net`) || Host(`home-prod-1.bowenarrows.net`)
+      traefik.http.routers.home-prod-1-https.tls: true
+      traefik.http.routers.home-prod-1-https.tls.certresolver: cloudflare
+      # traefik.http.routers.home-prod-1-https.middlewares: authentik-prod-1-middleware@file
+      traefik.http.routers.home-prod-1-https.service: home-prod-1-svc
+      traefik.http.services.home-prod-1-svc.loadBalancer.server.port: 8080
     networks:
       - frontend
       - backend
