--- a/grafana/grafana-prod-1/docker-compose.yml
+++ b/grafana/grafana-prod-1/docker-compose.yml
@@ -16,15 +16,20 @@ services:
     networks:
       - frontend
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.grafana-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.grafana-prod-1-http.rule=Host(`grafana-prod-1.home.bowenarrows.net`) || Host(`grafana-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.grafana-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.grafana-prod-1-https.rule=Host(`grafana-prod-1.home.bowenarrows.net`) || Host(`grafana-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.grafana-prod-1-https.tls=true"
-      - "traefik.http.routers.grafana-prod-1-https.tls.certresolver=cloudflare"
-      - "traefik.http.routers.grafana-prod-1-https.service=grafana-prod-1-svc"
-      - "traefik.http.services.grafana-prod-1-svc.loadBalancer.server.port=3000"
+      glance.name: Grafana
+      glance.icon: si:grafana
+      glance.id: grafana-prod-1
+      glance.url: https://grafana-prod-1.home.bowenarrows.net
+      glance.description: Data Visualization
+      traefik.enable: true
+      traefik.http.routers.grafana-prod-1-http.entrypoints: web
+      traefik.http.routers.grafana-prod-1-http.rule: Host(`grafana-prod-1.home.bowenarrows.net`) || Host(`grafana-prod-1.bowenarrows.net`)
+      traefik.http.routers.grafana-prod-1-https.entrypoints: websecure
+      traefik.http.routers.grafana-prod-1-https.rule: Host(`grafana-prod-1.home.bowenarrows.net`) || Host(`grafana-prod-1.bowenarrows.net`)
+      traefik.http.routers.grafana-prod-1-https.tls: true
+      traefik.http.routers.grafana-prod-1-https.tls.certresolver: cloudflare
+      traefik.http.routers.grafana-prod-1-https.service: grafana-prod-1-svc
+      traefik.http.services.grafana-prod-1-svc.loadBalancer.server.port: 3000
 
 volumes:
   grafana-storage: {}
