--- a/homepage/homepage-prod-1/docker-compose.yml
+++ b/homepage/homepage-prod-1/docker-compose.yml
@@ -19,16 +19,21 @@ services:
       - ./icons:/app/public/icons
       - /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.homepage-prod-1-http.entrypoints=web"
-      - "traefik.http.routers.homepage-prod-1-http.rule=Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.homepage-prod-1-https.entrypoints=websecure"
-      - "traefik.http.routers.homepage-prod-1-https.rule=Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)"
-      - "traefik.http.routers.homepage-prod-1-https.tls=true"
-      - "traefik.http.routers.homepage-prod-1-https.tls.certresolver=cloudflare"
-      - "traefik.http.routers.homepage-prod-1-https.middlewares=authentik-prod-1-middleware@file"
-      - "traefik.http.routers.homepage-prod-1-https.service=homepage-prod-1-svc"
-      - "traefik.http.services.homepage-prod-1-svc.loadBalancer.server.port=3000"
+      glance.name: Homepage
+      glance.icon: si:homepage
+      glance.id: homepage-prod-1
+      glance.url: https://homepage-prod-1.home.bowenarrows.net
+      glance.description: Homepage Dashboard
+      traefik.enable: true
+      traefik.http.routers.homepage-prod-1-http.entrypoints: web
+      traefik.http.routers.homepage-prod-1-http.rule: Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)
+      traefik.http.routers.homepage-prod-1-https.entrypoints: websecure
+      traefik.http.routers.homepage-prod-1-https.rule: Host(`homepage-prod-1.home.bowenarrows.net`) || Host(`homepage-prod-1.bowenarrows.net`)
+      traefik.http.routers.homepage-prod-1-https.tls: true
+      traefik.http.routers.homepage-prod-1-https.tls.certresolver: cloudflare
+      traefik.http.routers.homepage-prod-1-https.middlewares: authentik-prod-1-middleware@file
+      traefik.http.routers.homepage-prod-1-https.service: homepage-prod-1-svc
+      traefik.http.services.homepage-prod-1-svc.loadBalancer.server.port: 3000
     networks:
       - frontend
       - backend
