--- a/portainer/port-prod-1/docker-compose.yml
+++ b/portainer/port-prod-1/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     networks:
       - frontend
     labels:
+      glance.name: Portainer
+      glance.icon: si:portainer
+      glance.id: port-prod-1
+      glance.url: https://port-prod-1.home.bowenarrows.net
+      glance.description: Container Management
       traefik.enable: true
       traefik.http.routers.port-prod-1-https.rule: "Host(`port-prod-1.home.bowenarrows.net`) || Host(`port-prod-1.bowenarrows.net`)"
       traefik.http.routers.port-prod-1-https.entrypoints: "websecure"
