--- a/tailscale/ts-prod-1/docker-compose.yml
+++ b/tailscale/ts-prod-1/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     labels:
       glance.name: Tailscale
-      glance.icon: si:tailscale
+      glance.icon: sh:tailscale-light
       glance.id: ts-prod-1
       glance.description: VPN
 networks: {}
