--- a/authentik/authentik-prod-1/docker-compose.yml
+++ b/authentik/authentik-prod-1/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       - frontend
     labels:
       glance.name: Authentik
-      glance.icon: si:authentik
+      glance.icon: sh:authentik-light
       glance.id: authentik-prod-1-server
       glance.url: https://authentik-prod-1.bowenarrows.net
       glance.description: SAML2/OIDC authentication server.
