--- a/cloudflared/tunnel-prod-1/docker-compose.yml
+++ b/cloudflared/tunnel-prod-1/docker-compose.yml
@@ -14,6 +14,6 @@ services:
       - TUNNEL_TOKEN=${TUNNEL_TOKEN}
     labels:
       glance.name: Tunnel-Prod-1
-      glance.icon: si:cloudflare
+      glance.icon: sh:cloudflare-light
       glance.id: tunnel-prod-1
       glance.description: Cloudflare Tunnel
