--- a/kuma/kuma-prod-1/docker-compose.yml
+++ b/kuma/kuma-prod-1/docker-compose.yml
@@ -18,15 +18,15 @@ services:
       - backend
     labels:
       glance.name: Uptime Kuma
-      glance.icon: si:uptimekuma
+      glance.icon: sh:uptime-kuma-light
       glance.id: kuma-prod-1
       glance.url: https://kuma-prod-1.home.bowenarrows.net
       glance.description: Monitoring
       traefik.enable: true
       traefik.http.routers.kuma-prod-1-http.entrypoints: web
-      traefik.http.routers.kuma-prod-1-http.rule: Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma-prod-1.bowenarrows.net`)
+      traefik.http.routers.kuma-prod-1-http.rule: Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma.bowenarrows.net`)
       traefik.http.routers.kuma-prod-1-https.entrypoints: websecure
-      traefik.http.routers.kuma-prod-1-https.rule: Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma-prod-1.bowenarrows.net`)
+      traefik.http.routers.kuma-prod-1-https.rule: Host(`kuma-prod-1.home.bowenarrows.net`) || Host(`kuma.bowenarrows.net`)
       traefik.http.routers.kuma-prod-1-https.tls: true
       traefik.http.routers.kuma-prod-1-https.tls.certresolver: cloudflare
       traefik.http.routers.kuma-prod-1-https.service: kuma-prod-1-svc
